--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p style="float:right;"><a href="/legal.html">legal</a></p>
+        <p style="float:right;"><a href="{{ "/legal.html" | relative_url }}">legal</a></p>
       </div>
     </div>
 
