move style defs to central location + publication filter by name

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
-<p style="float:left;padding-right:40px;margin-right:20px;border-right:1px solid silver;">
+<p class="contact">
   {{ group.address.name}} <br />
   {{ group.address.street}} <br />
   {{ group.address.additional}} <br />
@@ -8,4 +8,4 @@
     <a href="#head">{{ head.title }} {{ head.name }}</a><br />
     <a href="#admin">Office</a>
 </p>
-<div style="clear:left;"></div>
+<div class="clear"></div>
