--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header" role="banner">
 
-  <div class="wrapper">
+  <div class="wrapper-header">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}" title="{{ site.title | escape }}"><img style="width:300px;" src="{{ "/img/Logo-engl-IKIM.png" | relative_url }}" alt="{{ site.title | escape }}" /></a>
@@ -17,6 +17,7 @@
         </label>
 
         <div class="trigger">
+          <a class="page-link" href="{{ "/institute" | relative_url }}">The institute</a>
           <a class="page-link" href="{{ "/people" | relative_url }}">People</a>
           <a class="page-link" href="{{ "/groups" | relative_url }}">Groups</a>
           <a class="page-link" href="{{ "/projects" | relative_url }}">Research Projects</a>
