deduplication + option stub for recent publications per group

--- a/_layouts/group.html
+++ b/_layouts/group.html
@@ -26,6 +26,7 @@ layout: default
 {{ content }}
 
 <h2><a href="{{ "/publications#" | append: head.name | relative_url }}">Publications</a></h2>
+<!-- {% bibliography --max 5 --group_by none --file mcmi.bib %} -->
 <h2>Contact</h2>
 {%- include contact.html -%}
 <h2>Team</h2>
