--- a/_includes/groups.html
+++ b/_includes/groups.html
@@ -1,19 +1,9 @@
 
 <ul class="grouplist">
     {% for group in site.data.groups %}
-      {% assign heads = site.data.people | where: "position", "head" %}
-      {% assign jrgs = site.data.people | where: "position", "jrg-head" %}
       <li><a href="{{ "/groups/" | append: group.name | relative_url }}">{{ group.label }}</a>
-      {% for head in heads %}
-        {% if head.group == group.name %}
-         {{ head.title }} {{ head.name }}
-        {% endif %}
-      {% endfor %}
-      {% for head in jrgs %}
-        {% if head.jrg == group.name %}
-         {{ head.title }} {{ head.name }}
-        {% endif %}
-      {% endfor %}
+      {% assign head = site.data.people[group.name] | find_exp: "item", "item.roles contains 'head'" %}
+      {{ head.title }} {{ head.name }}
       </li>
     {% endfor %}
 </ul>
