--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,11 +17,15 @@
         </label>
 
         <div class="trigger">
-          <a class="page-link" href="{{ "/institute" | relative_url }}">The institute</a>
-          <a class="page-link" href="{{ "/people" | relative_url }}">People</a>
-          <a class="page-link" href="{{ "/groups" | relative_url }}">Groups</a>
-          <a class="page-link" href="{{ "/projects" | relative_url }}">Research Projects</a>
-          <a class="page-link" href="{{ "/publications" | relative_url }}">Publications</a>
+          {% assign active = layout.nav_active %}
+          {% if page.nav_active %}
+          {% assign active = page.nav_active %}
+          {% endif %}
+          <a {{ 'class="page-link' }} {% if active == "institute" %} nav_active{% endif %}" href="{{ "/institute" | relative_url }}">The institute</a>
+          <a {{ 'class="page-link' }} {% if active == "people" %} nav_active{% endif %}" href="{{ "/people" | relative_url }}">People</a>
+          <a {{ 'class="page-link' }} {% if active == "groups" %} nav_active{% endif %}" href="{{ "/groups" | relative_url }}">Groups</a>
+          <a {{ 'class="page-link' }} {% if active == "projects" %} nav_active{% endif %}" href="{{ "/projects" | relative_url }}">Research Projects</a>
+          <a {{ 'class="page-link' }} {% if active == "publications" %} nav_active{% endif %}" href="{{ "/publications" | relative_url }}">Publications</a>
           <!--
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
