--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
           {% if page.nav_active %}
           {% assign active = page.nav_active %}
           {% endif %}
-          <a {{ 'class="page-link' }} {% if active == "institute" %} nav_active{% endif %}" href="{{ "/institute" | relative_url }}">The institute</a>
+          <a {{ 'class="page-link' }} {% if active == "institute" %} nav_active{% endif %}" href="{{ "/institute" | relative_url }}">The Institute</a>
           <a {{ 'class="page-link' }} {% if active == "people" %} nav_active{% endif %}" href="{{ "/people" | relative_url }}">People</a>
           <a {{ 'class="page-link' }} {% if active == "groups" %} nav_active{% endif %}" href="{{ "/groups" | relative_url }}">Groups</a>
           <a {{ 'class="page-link' }} {% if active == "projects" %} nav_active{% endif %}" href="{{ "/projects" | relative_url }}">Research Projects</a>
