--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,7 +7,12 @@ nav_active: projects
 
 <hr class="light-separator" />
 {% for tag in page.tags %}
-{% assign group = site.data.groups | find: "name", tag %}
-<a href="{{ '/groups/' | append: group.name | relative_url }}"> {{ group.label }}</a>{% unless forloop.last %} | {% endunless %}
+    {% assign group = site.data.groups | find: "name", tag %}
+    {% if group.url %}
+        <a href="{{group.url}}"> {{ group.label }}</a>
+    {% else %}
+        <a href="{{ '/groups/' | append: group.name | relative_url }}"> {{ group.label }}</a>
+    {% endif %}
+    {% unless forloop.last %} | {% endunless %}
 
 {% endfor %}
