--- a/_includes/team.html
+++ b/_includes/team.html
@@ -19,6 +19,8 @@
       <h3>Research Assistants</h3>
     {% when "shk" %}
       <h3>Student Assistants</h3>
+ {% when "labmanager" %}
+      <h3>Lab Manager</h3>
   {% endcase %}
 
   {% for person in role.items %}
